--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.telconnect</groupId>
 	<artifactId>config-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>config-server</name>
 	<description>Config server for all the services</description>
 	<url/>
@@ -34,6 +34,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<dependency>
