--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <module>services/service</module>
 
 	<!--Infra Service modules-->
-    <module>service-registry</module>
+    <module>eureka-server</module>
     <module>api-gateway</module>
     <module>config-server</module>
 
