--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -7,8 +7,5 @@ server:
 
 eureka:
   client:
-    registry-with-eureka: false
+    register-with-eureka: false
     fetch-registry: false
-
-  server:
-    wait-time-in-ms-when-sync-empty: 0
