--- a/src/eureka-server/src/main/resources/application.yml
+++ b/src/eureka-server/src/main/resources/application.yml
@@ -7,5 +7,8 @@ server:
 
 eureka:
   client:
-    register-with-eureka: false
+    registry-with-eureka: false
     fetch-registry: false
+
+  server:
+    wait-time-in-ms-when-sync-empty: 0
