--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <packaging>pom</packaging>
   <modules>
 	<!--Service modules-->
-    <module>services/service</module>
+    <module>services/auth-service</module>
     <module>services/service</module>
 
 	<!--Infra Service modules-->
