--- a/config-repo/api-gateway-dev.yml
+++ b/config-repo/api-gateway-dev.yml
@@ -10,3 +10,12 @@ management:
     web:
       exposure:
         include: "*"
+
+spring:
+  cloud:
+    gateway:
+      routes:
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path: /auth/**
