Updated pom (test commit from intelliJ UI)

--- a/config-repo/api-gateway-dev.yml
+++ b/config-repo/api-gateway-dev.yml
@@ -18,6 +18,6 @@ spring:
         - id: auth-service
           uri: lb://auth-service
           predicates:
-            - Path=/auth-service/auth/**
+            - Path=/auth/**
           filters:
             - StripPrefix=1
