--- a/config-repo/api-gateway-dev.yml
+++ b/config-repo/api-gateway-dev.yml
@@ -16,7 +16,7 @@ spring:
     gateway:
       routes:
         - id: auth-service
-          uri: lb://auth-service
+          uri: http://localhost:8082
           predicates:
             - Path=/auth-service/auth/**
           filters:
