--- a/config-repo/api-gateway-dev.yml
+++ b/config-repo/api-gateway-dev.yml
@@ -18,9 +18,7 @@ spring:
         - id: auth-service
           uri: http://localhost:8082
           predicates:
-            - Path=/auth-service/**
-          filters:
-            - StripPrefix=1
+            - Path=/**
 
 logging:
   level:
