Updated config repo

--- a/config-repo/api-gateway-dev.yml
+++ b/config-repo/api-gateway-dev.yml
@@ -19,6 +19,7 @@ spring:
           uri: http://localhost:8082
           predicates:
             - Path=/**
+          filters: []
 
 logging:
   level:
